--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: img/home-bg.jpg
 email: learningbyteaching.jimmy@gmail.com
 description: "我一直觉得学习任何东西，最好的方法就是将你学到的东西教一遍。现在我正在学习各种设计类的软件，所以我想将我学到的东西写下来，po到这个博客。供大家学习。"
 baseurl: ""
-url: "http://www.questionhunt.com"
+url: "http://www.iamjimmywang.com"
 zhihu_username: thinkingjimmy
 facebook_username: thinkingjimmy
 
