--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ facebook_username: thinkingjimmy
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: /:title
 paginate: 20
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
